manifests/dev-argocd-ingress.yaml
# ArgoCD 서버에 대한 Ingress 설정

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "true"
    konghq.com/preserve-host: "true"
spec:
  rules:
    - http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
